nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
spec:
  rules:
  - host: nginx-services.com
    http:
      paths:
      - backend:
          serviceName: default
          servicePort: 80
          servicePort: 443
